<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:elevation="12dp"
    app:cardCornerRadius="24dp"
    app:cardUseCompatPadding="true"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/chbSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/tvNumLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvTitleLabel" />


        <TextView
            android:id="@+id/tvTitleLabel"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/title_label"
            app:layout_constraintBottom_toTopOf="@+id/tvDescriptionLabel"
            app:layout_constraintEnd_toStartOf="@+id/tvTitle"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/chbSelected"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tvTitleLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintStart_toEndOf="@+id/tvTitleLabel"
            app:layout_constraintTop_toTopOf="@id/tvTitleLabel"
            tools:text="Хуйня к заголовку" />

        <TextView
            android:id="@+id/tvDescriptionLabel"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/description_label"
            app:layout_constraintBottom_toTopOf="@+id/tvNumLabel"
            app:layout_constraintEnd_toStartOf="@+id/tvDescription"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/chbSelected"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleLabel" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            app:layout_constraintBottom_toBottomOf="@id/tvDescriptionLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvDescriptionLabel"
            app:layout_constraintTop_toTopOf="@id/tvDescriptionLabel"
            tools:text="Хуйня к описанию" />

        <TextView
            android:id="@+id/tvNumLabel"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/code_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvNum"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/chbSelected"
            app:layout_constraintTop_toBottomOf="@+id/tvDescriptionLabel" />

        <TextView
            android:id="@+id/tvNum"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="0dp"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="@id/tvNumLabel"
            app:layout_constraintStart_toEndOf="@+id/tvNumLabel"
            app:layout_constraintTop_toTopOf="@id/tvNumLabel"
            tools:text="Хуйня к коду" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>